app/infra/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamhub
