app/infra/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamhub-gateway
  namespace: streamhub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: streamhub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamhub-gateway
                port:
                  number: 8080
